<resources>
    <string name="app_name">Kelime Bil</string>
    <string name="bir">1</string>
    <string name="iki">2</string>
    <string name="uc">3</string>
    <string name="dort">4</string>
    <string name="bes">5</string>
    <string name="B">B</string>
    <string name="İ">İ</string>
    <string name="L">L</string>
    <string name="G">G</string>
    <string name="R">R</string>
    <string name="T">T</string>
    <string name="Ğ">Ğ</string>
    <string name="D">D</string>
    <string name="BASLA">BAŞLA</string>
    <string name="BILGI">BİLGİ</string>
    <string name="kelime_bil">KELİME BİL</string>
    <string name="birinci_bilgi">Beş harfli bir kelime tahmin etmelisin</string>
    <string name="ikinci_bilgi">Eğer harf yeşil ise doğru bir harf buldun ve bu harfin yeri doğru</string>
    <string name="ucuncu_bilgi">Eğer harf turuncu ise bu harf kelimede var ancak yeri yanlış</string>
    <string name="dorduncu_bilgi">Eğer harf koyu gri ise bu harf kelimede bulunmuyor</string>
    <string name="besinci_bilgi">Eğer kelimeyi bilirsen kazanırsın. Unutma sadece 6 hakkın var</string>
    <string name="pes_et">Pes Et</string>
    <string name="ip_ucu">İpucu</string>
    <string name="zamanla_yaris">Zamanla Yarış</string>
    <string name="tekrar_oyna">Tekrar Oyna</string>
    <string name="cikis">Çıkış</string>
    <string name="kaybettiniz">Kaybettiniz</string>
    <string name="pesEtSorusu">Yeni bir oyuna başlamak ister misiniz?</string>
    <string name="zamanlamaUyariMetni">Zamanlama başlatabilmek için mevcut ilerlemeyi tamamlayınız ya da yeni tur başlatınız</string>
    <string name="uyari">UYARI</string>
    <string name="rekor">Rekor:</string>
    <string name="tebrik">TEBRİKLER! Süre rekorunu kırdınız!</string>
    <string name="ok">-></string>
    <string name="yeni_rekor">YENİ REKOR</string>
    <string name="tamam">TAMAM</string>
    <string name="S">S</string>
    <string name="P">P</string>
    <string name="I">I</string>
    <string name="E">E</string>
    <string name="kelime_bulunamadi">KELİME BULUNAMADI</string>
    <string name="yenilgi_mesaji">Kaybettiniz. Doğru kelime:</string>
    <string name="kazanma_mesaji">Tebrikler kazandın! Yeni bir oyuna ne dersin?</string>
    <string name="geri_don">Geri dönmek için geri tuşuna basın</string>
    <string name="dogru_kelime">Doğru kelime:</string>
    <string name="turkce_anlami">Türkçe:</string>
    <string name="level_A1">Level A1</string>
    <string name="level_A2">Level  A2</string>
    <string name="level_B1">Level  B1</string>
    <string name="level_B2">Level  B2</string>
</resources>