<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_dialog_constraite"
    android:background="#060606">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_de"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="55dp"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@color/boxbackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/levelA1_Button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/language_level_buttons"
            android:elevation="6dp"
            android:fontFamily="@font/k2d_semibold"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/level_A1"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <Button
            android:id="@+id/levelA2_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/language_level_buttons"
            android:elevation="6dp"
            android:fontFamily="@font/k2d_semibold"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/level_A2"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelA1_Button" />

        <Button
            android:id="@+id/levelB1_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/language_level_buttons"
            android:elevation="6dp"
            android:fontFamily="@font/k2d_semibold"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/level_B1"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelA2_button" />

        <Button
            android:id="@+id/levelB2_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/language_level_buttons"
            android:elevation="6dp"
            android:fontFamily="@font/k2d_semibold"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/level_B2"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelB1_button" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>